fix: detach labels

--- a/mctaco_finetuning_alice.ipynb
+++ b/mctaco_finetuning_alice.ipynb
@@ -1062,8 +1062,8 @@
               {
                 "output_type": "display_data",
                 "data": {
-                  "text/plain": "Epoch 2    \u001b[38;2;98;6;224m━━━━\u001b[0m\u001b[38;5;237m╺\u001b[0m\u001b[38;5;237m━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[37m72/415\u001b[0m \u001b[38;5;245m0:03:55 • 0:18:38\u001b[0m \u001b[38;5;249m0.31it/s\u001b[0m \u001b[37mloss: 7.18 v_num: moez \u001b[0m\n",
-                  "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Epoch 2    <span style=\"color: #6206e0; text-decoration-color: #6206e0\">━━━━</span><span style=\"color: #3a3a3a; text-decoration-color: #3a3a3a\">╺━━━━━━━━━━━━━━━━━━━</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">72/415</span> <span style=\"color: #8a8a8a; text-decoration-color: #8a8a8a\">0:03:55 • 0:18:38</span> <span style=\"color: #b2b2b2; text-decoration-color: #b2b2b2\">0.31it/s</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">loss: 7.18 v_num: moez </span>\n</pre>\n"
+                  "text/plain": "Epoch 3    \u001b[38;2;98;6;224m━━━\u001b[0m\u001b[38;2;98;6;224m╸\u001b[0m\u001b[38;5;237m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[37m68/415\u001b[0m \u001b[38;5;245m0:03:44 • 0:18:48\u001b[0m \u001b[38;5;249m0.31it/s\u001b[0m \u001b[37mloss: 6.61 v_num: moez \u001b[0m\n",
+                  "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Epoch 3    <span style=\"color: #6206e0; text-decoration-color: #6206e0\">━━━╸</span><span style=\"color: #3a3a3a; text-decoration-color: #3a3a3a\">━━━━━━━━━━━━━━━━━━━━</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">68/415</span> <span style=\"color: #8a8a8a; text-decoration-color: #8a8a8a\">0:03:44 • 0:18:48</span> <span style=\"color: #b2b2b2; text-decoration-color: #b2b2b2\">0.31it/s</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">loss: 6.61 v_num: moez </span>\n</pre>\n"
                 },
                 "metadata": {}
               }
@@ -1731,7 +1731,7 @@
         "                return loss\n",
         "\n",
         "            # Compute  loss (detached state)\n",
-        "            gold_loss = self.gold_loss_fn(state_perturbed_1, one_hot_labels)\n",
+        "            gold_loss = self.gold_loss_fn(state_perturbed_1, one_hot_labels.detach())\n",
         "            virtual_loss = self.virtual_loss_fn(state_perturbed_2, state.detach()) \n",
         "            loss = gold_loss + self.alpha * virtual_loss\n",
         "\n",
