fix: refactor ALICE code

--- a/mctaco_finetuning_alice.ipynb
+++ b/mctaco_finetuning_alice.ipynb
@@ -1062,8 +1062,8 @@
               {
                 "output_type": "display_data",
                 "data": {
-                  "text/plain": "\u001b[37mEpoch 0   \u001b[0m \u001b[38;2;98;6;224m╸\u001b[0m\u001b[38;5;237m━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[37m13/415\u001b[0m \u001b[38;5;245m0:00:41 • 0:20:07\u001b[0m \u001b[38;5;249m0.33it/s\u001b[0m \u001b[37mloss: 9.15 v_num: uhch \u001b[0m\n",
-                  "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">Epoch 0   </span> <span style=\"color: #6206e0; text-decoration-color: #6206e0\">╸</span><span style=\"color: #3a3a3a; text-decoration-color: #3a3a3a\">━━━━━━━━━━━━━━━━━━━━━━━</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">13/415</span> <span style=\"color: #8a8a8a; text-decoration-color: #8a8a8a\">0:00:41 • 0:20:07</span> <span style=\"color: #b2b2b2; text-decoration-color: #b2b2b2\">0.33it/s</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">loss: 9.15 v_num: uhch </span>\n</pre>\n"
+                  "text/plain": "Epoch 3    \u001b[38;2;98;6;224m━\u001b[0m\u001b[38;2;98;6;224m╸\u001b[0m\u001b[38;5;237m━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[37m31/415\u001b[0m \u001b[38;5;245m0:01:42 • 0:20:43\u001b[0m \u001b[38;5;249m0.31it/s\u001b[0m \u001b[37mloss: 6.84 v_num: uhch \u001b[0m\n",
+                  "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Epoch 3    <span style=\"color: #6206e0; text-decoration-color: #6206e0\">━╸</span><span style=\"color: #3a3a3a; text-decoration-color: #3a3a3a\">━━━━━━━━━━━━━━━━━━━━━━</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">31/415</span> <span style=\"color: #8a8a8a; text-decoration-color: #8a8a8a\">0:01:42 • 0:20:43</span> <span style=\"color: #b2b2b2; text-decoration-color: #b2b2b2\">0.31it/s</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">loss: 6.84 v_num: uhch </span>\n</pre>\n"
                 },
                 "metadata": {}
               }
@@ -1706,14 +1706,27 @@
         "        noise_1 = torch.randn_like(embed, requires_grad=True) * self.noise_var\n",
         "        noise_2 = torch.randn_like(embed, requires_grad=True) * self.noise_var\n",
         "        one_hot_labels = F.one_hot(self.labels).float()\n",
+        "\n",
+        "        def compute_grad(loss, noise):\n",
+        "            # Compute noise gradient ∂loss/∂noise\n",
+        "            noise_gradient, = torch.autograd.grad(loss, noise)\n",
+        "            # Move noise towards gradient to change state as much as possible \n",
+        "            step = noise + self.step_size * noise_gradient\n",
+        "            # Normalize new noise step into norm induced ball \n",
+        "            step_norm = self.norm_fn(step)\n",
+        "            noise = step / (step_norm + self.epsilon)\n",
+        "            # Reset noise gradients for next step\n",
+        "            noise = noise.detach().requires_grad_()\n",
+        "        \n",
+        "        def eval_perturbed(embed: Tensor, noise: Tensor):\n",
+        "            embed_perturbed = embed + noise\n",
+        "            return self.eval_fn(embed_perturbed)\n",
         "         \n",
         "        # Indefinite loop with counter \n",
         "        for i in count():\n",
         "            # Compute perturbed embed and states \n",
-        "            embed_perturbed_1 = embed + noise_1 \n",
-        "            embed_perturbed_2 = embed + noise_2\n",
-        "            state_perturbed_1 = self.eval_fn(embed_perturbed_1)\n",
-        "            state_perturbed_2 = self.eval_fn(embed_perturbed_2)\n",
+        "            state_perturbed_1 = eval_perturbed(embed, noise_1)\n",
+        "            state_perturbed_2 = eval_perturbed(embed, noise_2)\n",
         "\n",
         "            # Return logits loss if last step (undetached state)\n",
         "            if i == self.num_steps: \n",
@@ -1727,20 +1740,9 @@
         "            virtual_loss = self.virtual_loss_fn(state_perturbed_2, state.detach()) \n",
         "            loss = gold_loss + self.alpha * virtual_loss\n",
         "\n",
-        "            # Compute noise gradient ∂loss/∂noise\n",
-        "            noise_1_gradient, = torch.autograd.grad(loss, noise_1)\n",
-        "            noise_2_gradient, = torch.autograd.grad(loss, noise_2)\n",
-        "            # Move noise towards gradient to change state as much as possible \n",
-        "            step_1 = noise_1 + self.step_size * noise_1_gradient \n",
-        "            step_2 = noise_2 + self.step_size * noise_2_gradient \n",
-        "            # Normalize new noise step into norm induced ball \n",
-        "            step_1_norm = self.norm_fn(step_1)\n",
-        "            step_2_norm = self.norm_fn(step_2)\n",
-        "            noise_1 = step_1 / (step_1_norm + self.epsilon)\n",
-        "            noise_2 = step_2 / (step_2_norm + self.epsilon)\n",
-        "            # Reset noise gradients for next step\n",
-        "            noise_1 = noise_1.detach().requires_grad_()\n",
-        "            noise_2 = noise_2.detach().requires_grad_()"
+        "            # Compute noise gradients\n",
+        "            compute_grad(loss, noise_1)\n",
+        "            compute_grad(loss, noise_2)"
       ],
       "metadata": {
         "id": "wdqOqnUKjPAv"
