feat: add vat_hp_tune script

--- a/mctaco_finetuning_alice.ipynb
+++ b/mctaco_finetuning_alice.ipynb
@@ -1,28 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "mctaco_finetuning.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "gpuClass": "standard"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/TheBlueHawk/CS4NLP_Project2022/blob/main/mctaco_finetuning_alice.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -30,29 +12,19 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install datasets\n",
-        "!pip install transformers[sentencepiece]\n",
-        "!pip install sentencepiece # necessary for DeBERTa-v3\n",
-        "!pip install pytorch-lightning==1.5.10\n",
-        "!pip install wandb\n",
-        "!pip install rich\n",
-        "!pip install torchmetrics\n",
-        "!pip install smart-pytorch "
-      ],
+      "execution_count": 1,
       "metadata": {
-        "id": "RODKYoCw92rk",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
+        "id": "RODKYoCw92rk",
         "outputId": "c828e305-72b5-4b8f-8985-a336310a06fb"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting datasets\n",
@@ -236,7 +208,6 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
             "application/vnd.colab-display-data+json": {
               "pip_warning": {
@@ -246,11 +217,12 @@
               }
             }
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting wandb\n",
@@ -325,77 +297,62 @@
             "Successfully installed data-science-types-0.2.23 smart-pytorch-0.0.4\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install datasets\n",
+        "!pip install transformers[sentencepiece]\n",
+        "!pip install sentencepiece # necessary for DeBERTa-v3\n",
+        "!pip install pytorch-lightning==1.5.10\n",
+        "!pip install wandb\n",
+        "!pip install rich\n",
+        "!pip install torchmetrics\n",
+        "!pip install smart-pytorch "
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Login to Wandb for logging\n",
-        "import wandb\n",
-        "wandb.login()"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "uOm32vHNyQSl",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 109
         },
+        "id": "uOm32vHNyQSl",
         "outputId": "874e934a-6a0e-4c73-8370-4212b3d9ccfb"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
+            "application/javascript": "\n        window._wandbApiKey = new Promise((resolve, reject) => {\n            function loadScript(url) {\n            return new Promise(function(resolve, reject) {\n                let newScript = document.createElement(\"script\");\n                newScript.onerror = reject;\n                newScript.onload = resolve;\n                document.body.appendChild(newScript);\n                newScript.src = url;\n            });\n            }\n            loadScript(\"https://cdn.jsdelivr.net/npm/postmate/build/postmate.min.js\").then(() => {\n            const iframe = document.createElement('iframe')\n            iframe.style.cssText = \"width:0;height:0;border:none\"\n            document.body.appendChild(iframe)\n            const handshake = new Postmate({\n                container: iframe,\n                url: 'https://wandb.ai/authorize'\n            });\n            const timeout = setTimeout(() => reject(\"Couldn't auto authenticate\"), 5000)\n            handshake.then(function(child) {\n                child.on('authorize', data => {\n                    clearTimeout(timeout)\n                    resolve(data)\n                });\n            });\n            })\n        });\n    ",
             "text/plain": [
               "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "        window._wandbApiKey = new Promise((resolve, reject) => {\n",
-              "            function loadScript(url) {\n",
-              "            return new Promise(function(resolve, reject) {\n",
-              "                let newScript = document.createElement(\"script\");\n",
-              "                newScript.onerror = reject;\n",
-              "                newScript.onload = resolve;\n",
-              "                document.body.appendChild(newScript);\n",
-              "                newScript.src = url;\n",
-              "            });\n",
-              "            }\n",
-              "            loadScript(\"https://cdn.jsdelivr.net/npm/postmate/build/postmate.min.js\").then(() => {\n",
-              "            const iframe = document.createElement('iframe')\n",
-              "            iframe.style.cssText = \"width:0;height:0;border:none\"\n",
-              "            document.body.appendChild(iframe)\n",
-              "            const handshake = new Postmate({\n",
-              "                container: iframe,\n",
-              "                url: 'https://wandb.ai/authorize'\n",
-              "            });\n",
-              "            const timeout = setTimeout(() => reject(\"Couldn't auto authenticate\"), 5000)\n",
-              "            handshake.then(function(child) {\n",
-              "                child.on('authorize', data => {\n",
-              "                    clearTimeout(timeout)\n",
-              "                    resolve(data)\n",
-              "                });\n",
-              "            });\n",
-              "            })\n",
-              "        });\n",
-              "    "
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "\u001b[34m\u001b[1mwandb\u001b[0m: Logging into wandb.ai. (Learn how to deploy a W&B server locally: https://wandb.me/wandb-server)\n",
             "\u001b[34m\u001b[1mwandb\u001b[0m: You can find your API key in your browser here: https://wandb.ai/authorize\n"
           ]
         }
+      ],
+      "source": [
+        "# Login to Wandb for logging\n",
+        "import wandb\n",
+        "wandb.login()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "HAtERoMt_GJw"
+      },
+      "outputs": [],
       "source": [
         "import pytorch_lightning as pl\n",
         "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
@@ -411,15 +368,15 @@
         "\n",
         "tokenizer = AutoTokenizer.from_pretrained(params['pretrained_model_name'])\n",
         "architecture = AutoModelForSequenceClassification.from_pretrained(params['pretrained_model_name'])"
-      ],
-      "metadata": {
-        "id": "HAtERoMt_GJw"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "x3B6be7JbX5N"
+      },
+      "outputs": [],
       "source": [
         "import torch \n",
         "from torch.utils.data import Dataset\n",
@@ -470,15 +427,15 @@
         "        \n",
         "dataset = MCTACODataset(split='validation', tokenizer=tokenizer, sequence_length=params['sequence_length'])\n",
         "print(dataset[10])"
-      ],
-      "metadata": {
-        "id": "x3B6be7JbX5N"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "HmZWTVbZtXiA"
+      },
+      "outputs": [],
       "source": [
         "from torch.utils.data import DataLoader\n",
         "\n",
@@ -524,15 +481,15 @@
         "\n",
         "datamodule = MCTACODatamodule(tokenizer, batch_size = params['batch_size'], sequence_length = params['sequence_length']) \n",
         "datamodule.setup()"
-      ],
-      "metadata": {
-        "id": "HmZWTVbZtXiA"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "UmQ_m6qPjI8e"
+      },
+      "outputs": [],
       "source": [
         "from ast import Call\n",
         "from typing import Union, Callable\n",
@@ -553,15 +510,15 @@
         "\n",
         "def inf_norm(x):\n",
         "    return torch.norm(x, p=float('inf'), dim=-1, keepdim=True)"
-      ],
-      "metadata": {
-        "id": "UmQ_m6qPjI8e"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "wdqOqnUKjPAv"
+      },
+      "outputs": [],
       "source": [
         "class ALICELoss(nn.Module):\n",
         "    \n",
@@ -634,26 +591,24 @@
         "            # Compute noise gradients\n",
         "            compute_grad(gold_loss, noise_1)\n",
         "            compute_grad(virtual_loss, noise_2)"
-      ],
-      "metadata": {
-        "id": "wdqOqnUKjPAv"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Bj9VM14RjPKk"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vw3O3AQynqlx"
+      },
+      "outputs": [],
       "source": [
         "from smart_pytorch import SMARTLoss\n",
         "import torch.nn as nn\n",
@@ -699,15 +654,15 @@
         "input_ids, input_mask, labels = next(iter(datamodule.train_dataloader()))    \n",
         "alice_architecture = ALICEClassificationModel(architecture, weight=params['alice_loss_weight'])\n",
         "#output, loss = alice_architecture(input_ids, input_mask, labels)"
-      ],
-      "metadata": {
-        "id": "vw3O3AQynqlx"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "FzAdkvT-u2uD"
+      },
+      "outputs": [],
       "source": [
         "import torch.nn as nn \n",
         "from transformers import Adafactor\n",
@@ -753,15 +708,15 @@
         "        return loss\n",
         "\n",
         "model = TextClassificationModel(alice_architecture)"
-      ],
-      "metadata": {
-        "id": "FzAdkvT-u2uD"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "0a6H-ySXw_v0"
+      },
+      "outputs": [],
       "source": [
         "# Wandb Logger\n",
         "logger = pl.loggers.wandb.WandbLogger(project = 'cs4nlp', entity='nextmachina')\n",
@@ -773,35 +728,55 @@
         "trainer.logger.log_hyperparams(params)\n",
         "trainer.fit(model=model, datamodule=datamodule)\n",
         "wandb.finish() "
-      ],
-      "metadata": {
-        "id": "0a6H-ySXw_v0"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "target = torch.randint(high=2, size=(1,32)).view(-1)\n",
-        "target"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "KyJSmg8HS8BR"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "target = torch.randint(high=2, size=(1,32)).view(-1)\n",
+        "target"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "F.one_hot(target)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "JzdhfMbrrwBC"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "F.one_hot(target)"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "mctaco_finetuning.ipynb",
+      "provenance": []
+    },
+    "gpuClass": "standard",
+    "kernelspec": {
+      "display_name": "Python 3.9.13 ('CS4NLP')",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.9.13"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "8017755989c558bf3dd40ed9a9cb81f6191ae568b9be68426c18a53bcea8831e"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
